# Loomscan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GUIDE.md  README.md  SECURITY.md  pyproject.toml  worklog.md
.github/actions/loomscan-action/: action.yml
.github/actions/stca-action/: action.yml
.github/workflows/: build-jetbrains.yml  build-rust-wheels.yml  ci.yml  loomscan-bot.yml  loomscan.yml  publish-main.yml  stca.yml
.mimocode/: .cron-lock
loomscan/: __init__.py  _paths.py  business_logic_miner.py  cli.py  cli_display.py  cli_v2.py  code_quality.py  codebase_understanding.py  concurrency.py  config.py  config_scanner.py  cve_database.py  dynamic_cve_checker.py  field_taint_tracker.py  gnn_cpg.py  hotspots.py  html_scanner.py  iac_scanner.py  installer.py  integer_overflow_detector.py  issue_store.py  jsx_auth.py  knowledge_graph.py  learning.py  loomscanignore.py  maven_cve_db.py  merge_review.py  multi_call.py  orchestrator.py  pre_commit.py  runtime_error_scanner.py  source_discovery.py  strictness.py  toctou_detector.py  tree_sitter_analyzer.py  v4_aggregator.py  v4_restored.py  yaml_engine.py
loomscan/cli/: __init__.py  advanced.py  security.py
loomscan/layers/: l0_fast.py  l0d_behavioral.py  l0f_commit_risk.py  l8_autofix.py
loomscan/lsp/: server.py
loomscan/report/: html.py
loomscan/rules/: __init__.py
loomscan/rules/packs/: ai-security.yml  bash-deep.yml  bash-security.yml  detekt-inspired.yml  framework-taint.yml  java-deep.yml  java-frameworks.yml  java-production-incidents.yml  java-security.yml  javascript-security.yml  lintr-inspired.yml  owasp-top-10.yml  python-deep.yml  python-security.yml  semgrep-community-deep.yml
loomscan/tui/: __init__.py  app.py  command_palette.py  image_render.py  logo.py  mascot.py  mascot_widget.py  opentui_app.py  results_view.py  scan_view.py  wizard.py
loomscan/tui/assets/: loomy-spider-ascii.txt
loomscan/tui/screens/: __init__.py  config.py  results.py  scanning.py  settings.py  welcome.py
rust-core/: Cargo.toml  pyproject.toml
scripts/: find_bad_loggers.py  fix_bare_excepts.py  fix_hardcoded_paths.py  fix_silent_except.py  fix_silent_except_v2.py  fix_v59_tests.py  rewire_scanner_errors.py  show_silent_context.py  split_cli.py  survey_silent_except.py  test_cli_display.py  test_opentui.py  test_v731_java_bl.py  test_v731_rules.py  test_v732_clean_code_fp.py  test_v732_pack_loading.py  test_v733_p3_fixes.py  test_v734_explainable_aggregator.py  test_v734_suppression_scope.py  test_v73_business_logic.py  test_v73_rules.py
stca/: __init__.py  advanced_secrets.py  architecture.py  audit.py  baseline.py  bug_seeds.py  business_logic.py  cache.py  cli.py  cli_v2.py  code_quality.py  codebase_miner.py  complexity_metrics.py  concurrency.py  config.py  config_scanner.py  consistency.py  contracts.py  counterfactual.py  coverage.py  cpg.py  cpg_queries.py  crypto_audit.py  deadcode.py  diff_slicer.py  differential.py  doc_audit.py  duplication.py  extra_rules.py  ffi_analyzer.py  flawfinder_db.py  hotspots.py  html_scanner.py  iac_scanner.py  impact_analysis.py  incremental.py  installer.py  interprocedural.py  issue_store.py  js_cpg.py  (+29 more)
stca/bootstrap/: harness_gen.py  invariant_inference.py  property_gen.py
stca/brain/: __init__.py  aggregator.py  bayesian.py  project_tuner.py  rules.py  tuner.py
stca/feedback/: rule_capture.py  stats.py
stca/layers/: __init__.py  base.py  l0_fast.py  l0b_supply_chain.py  l0c_dependencies.py  l0d_behavioral.py  l0e_iac.py  l0f_commit_risk.py  l2_mutation.py  l3_invariants.py  l4_fuzz.py  l5_policy.py  l7_simulation.py  l8_autofix.py
stca/llm/: __init__.py
stca/lsp/: server.py
stca/report/: dashboard.py  html.py  sarif.py  tui.py
stca/rules/: __init__.py
stca/rules/packs/: detekt-ported.yml  go-security.yml  java-frameworks.yml  java-security.yml  javascript-frameworks.yml  javascript-security.yml  lintr-ported.yml  luacheck-ported.yml  python-frameworks.yml  python-security.yml  react-security.yml  spotbugs-ported.yml
tests/: conftest.py  test_advanced_layers.py  test_brain.py  test_cache.py  test_detection_frontier.py  test_diff_slicer.py  test_enterprise_features.py  test_frontier_techniques.py  test_gnn_cpg.py  test_installer.py  test_it2_fis.py  test_new_detection.py  test_orchestrator.py  test_oss_inspired.py  test_ported_configs.py  test_precision_engine.py  test_scanner_health.py  test_supply_chain.py  test_v435_smoke.py  test_v443_smoke.py  test_v45_regression_probes.py  test_v511_smoke.py  test_v512_smoke.py  test_v513_smoke.py  test_v514_smoke.py  test_v516_smoke.py  test_v52_smoke.py  test_v53_smoke.py  test_v54_smoke.py  test_v55_smoke.py  test_v56_smoke.py  test_v57_smoke.py  test_v58_smoke.py  test_v59_smoke.py  test_v5_smoke.py  test_v751_smoke.py
