[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stca-pipeline"
version = "0.1.0"
description = "Static + Test + Constraint Analysis — an offline, deterministic-first bug detection pipeline with a type-2 fuzzy aggregation brain"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "STCA Project" }]
keywords = ["static-analysis", "fuzzing", "mutation-testing", "formal-methods", "fuzzy-logic", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-java>=0.21",
    "tree-sitter-c>=0.21",
    "tree-sitter-cpp>=0.21",
    "numpy>=1.24",
    "scikit-fuzzy>=0.5",
]

[project.optional-dependencies]
llm = ["requests>=2.28"]      # for Ollama client
fuzz = ["atheris>=2.1"]       # Python fuzzing (L4)
property = ["hypothesis>=6.100"]
mutation = ["mutmut>=3.0"]    # L2 mutation testing
supply-chain = ["pip-audit>=2.7"]  # L0b Python CVEs
all-tools = [
    "hypothesis>=6.100",
    "mutmut>=3.0",
    "pip-audit>=2.7",
]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "hypothesis>=6.100"]

[project.scripts]
stca = "stca.cli:main"

[tool.setuptools.packages.find]
include = ["stca*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
