[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loomscan"
version = "7.1.0"
description = "Static + Test + Constraint Analysis — an offline, deterministic-first bug detection pipeline with a type-2 fuzzy aggregation brain"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "LoomScan Project" }]
keywords = ["static-analysis", "security", "sast", "fuzzing", "mutation-testing", "fuzzy-logic", "developer-tools", "code-quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "Environment :: Console",
]

# ============================================================================
# v5.8: 3-tier installation model
# ============================================================================
#
# Tier 1 (default): pip install loomscan
#   → Pure Python, works on Linux/macOS/Windows, no compilation
#   → All 2,095 YAML rules fire (via Python re fallback)
#   → No tree-sitter (CPG/def-use chains degraded but functional)
#   → No Rust core (10-50x slower than [fast] but correct)
#
# Tier 2: pip install loomscan[full]
#   → Adds tree-sitter grammars for deep multi-language analysis
#   → Enables CPG def-use chains, metamorphic testing, full taint tracking
#
# Tier 3: pip install loomscan[fast]
#   → Adds Rust regex core (loomscan-regex) for 10-50x faster YAML scanning
#   → All Tier 2 features included
#
# Specialized extras (for specific features):
#   pip install loomscan[llm]       → LLM-verify via Ollama
#   pip install loomscan[fuzz]      → Python fuzzing (L4)
#   pip install loomscan[mutation]  → Mutation testing (L2)
#   pip install loomscan[semgrep]   → Full YAML rule support (pattern-inside, metavariables)
#
# Dev: pip install loomscan[dev]    → pytest, mypy, build, twine

dependencies = [
    # Tier 1 core — pure Python, always required
    # v5.10: Removed scikit-fuzzy — LoomScan's IT2-FIS is implemented natively
    # in loomscan/brain/ (pure Python, no scipy dependency). scikit-fuzzy was
    # listed but never imported, and its scipy transitive dep broke macOS installs.
    # v5.17: Added pyfiglet for ASCII art logo
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "numpy>=1.24",
    "pyfiglet>=1.0",
]

[project.optional-dependencies]
# v5.12: [full] now includes EVERYTHING — tree-sitter + Rust core + TUI
# This is the "install once, get everything" tier.
# Users who want a lighter install can use the base install or individual extras.
full = [
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-java>=0.21",
    "tree-sitter-c>=0.21",
    "tree-sitter-cpp>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-rust>=0.21",
    "hypothesis>=6.100",      # property-based testing (L1)
    "pip-audit>=2.7",         # supply chain CVE checks (L0b)
    # v5.12: [full] now includes the Rust core + TUI
    # v5.16: Added OpenTUI (native Zig core) as primary TUI engine
    "loomscan-regex>=0.1.0",  # Rust regex engine (10-50x faster)
    "opentui>=0.1.2",         # OpenTUI Python port (native Zig TUI)
    "yoga-python>=0.1.4",     # Layout engine for opentui
    "textual>=0.50",          # Fallback TUI
    "textual-image>=0.13",    # Image rendering for mascot
    "textual-fspicker>=1.0",  # File picker for TUI
    "pillow>=10.0",           # Image processing
]

# v5.12: [fast] is now an alias for [full] (which already includes Rust core)
# Kept for backward compat with users who run pip install loomscan[fast]
fast = ["loomscan[full]"]

# Specialized feature extras (optional, for specific use cases)
llm = ["requests>=2.28"]            # for Ollama client (LLM-verify)
fuzz = ["atheris>=2.1"]             # Python fuzzing (L4)
mutation = ["mutmut>=3.0"]          # L2 mutation testing
semgrep = ["semgrep>=1.50"]         # Full YAML rule support (pattern-inside, metavariables)
re2 = ["google-re2>=0.3"]           # ReDoS protection (linear-time regex, alternative to Rust core)

# v5.10: Premium TUI — term-image for real inline graphics in supporting terminals
# (Kitty, iTerm2, WezTerm, VS Code, Ghostty). Falls back to Unicode art.
premium = ["term-image>=0.7"]

# v5.11: Full TUI app — Textual-powered interactive mode
# v5.16: Now uses OpenTUI (native Zig core) as primary, Textual as fallback
# Run `loomscan` with no args to launch the full-screen TUI
# (Also included in [full] above)
tui = [
    "opentui>=0.1.2",        # OpenTUI Python port (native Zig core)
    "yoga-python>=0.1.4",    # Layout engine for opentui
    "textual>=0.50",         # Fallback if opentui not available
    "textual-image>=0.13",
    "textual-fspicker>=1.0",
    "pillow>=10.0",
]

# v5.12: [all] is the canonical "everything" extra. [all-tools] is kept as alias.
all = [
    "loomscan[full]",
    "loomscan[llm]",
    "loomscan[fuzz]",
    "loomscan[mutation]",
    "loomscan[semgrep]",
    "loomscan[premium]",
]

# All optional tools (everything) — alias for [all]
all-tools = [
    "loomscan[all]",
]

# Development
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.100",
    "mypy>=1.8",
    "build>=1.0",
    "twine>=4.0",
]

[project.scripts]
loomscan = "loomscan.cli:main"

[project.urls]
Homepage = "https://github.com/Daveshvats/loomscan"
Documentation = "https://github.com/Daveshvats/loomscan/blob/main/GUIDE.md"
Issues = "https://github.com/Daveshvats/loomscan/issues"

[tool.setuptools.packages.find]
include = ["loomscan*"]

[tool.setuptools.package-data]
"loomscan.rules" = ["packs/*.yml", "policies/*.rego"]
# v5.9: Include mascot image assets (optimized GIF + PNG frames)
# v5.11: Also include ASCII art spider
# Total size: ~250KB (GIF 112KB + 24 PNG frames 131KB + ASCII art 6KB)
"loomscan.tui" = ["assets/*.gif", "assets/*.txt", "assets/frames/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
files = ["loomscan/"]
exclude = [
    "loomscan/cli.py",
    "loomscan/orchestrator.py",
    "loomscan/v4_restored.py",
]
